SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/AWS_PRICING_WORKSPACES__c.object
<CustomObject>
    <fields>
        <fullName>Bundle__c</fullName>
        <label>Bundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>EffectiveDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndingRange__c</fullName>
        <label>EndingRange</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GroupDescription__c</fullName>
        <label>GroupDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationType__c</fullName>
        <label>LocationType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memory__c</fullName>
        <label>Memory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferTermCode__c</fullName>
        <label>OfferTermCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperatingSystem__c</fullName>
        <label>OperatingSystem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriceDescription__c</fullName>
        <label>PriceDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricePerUnit__c</fullName>
        <label>PricePerUnit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>ProductFamily</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RateCode__c</fullName>
        <label>RateCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedTo__c</fullName>
        <label>RelatedTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResourceType__c</fullName>
        <label>ResourceType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RootVolume__c</fullName>
        <label>RootVolume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RunningMode__c</fullName>
        <label>RunningMode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceCode__c</fullName>
        <label>ServiceCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <label>ServiceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sku__c</fullName>
        <label>Sku</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoftwareIncluded__c</fullName>
        <label>SoftwareIncluded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartingRange__c</fullName>
        <label>StartingRange</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <label>Storage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermType__c</fullName>
        <label>TermType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsageType__c</fullName>
        <label>UsageType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserVolume__c</fullName>
        <label>UserVolume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VCpu__c</fullName>
        <label>VCpu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AWS_PRICING_WORKSPACES</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sku__c</columns>
        <columns>OfferTermCode__c</columns>
        <columns>RateCode__c</columns>
        <columns>TermType__c</columns>
        <columns>PriceDescription__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>StartingRange__c</columns>
        <columns>EndingRange__c</columns>
        <columns>Unit__c</columns>
        <columns>PricePerUnit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>AWS_PRICING_WORKSPACES</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AWS_PRICING_WORKSPACES</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>